@@ -214,6 +214,11 @@ typedef enum {
 
 	GTK_HTML_COMMAND_SCROLL_BOD,
 	GTK_HTML_COMMAND_SCROLL_EOD,
+
+	GTK_HTML_COMMAND_CELL_CSPAN_INC,
+	GTK_HTML_COMMAND_CELL_RSPAN_INC,
+	GTK_HTML_COMMAND_CELL_CSPAN_DEC,
+	GTK_HTML_COMMAND_CELL_RSPAN_DEC,
 } GtkHTMLCommandType;
 
 typedef enum {
