@@ -1,3 +1,8 @@
+2002-12-13  Radek Doulik  <rodo@ximian.com>
+
+	* htmlengine-edit-cursor.c (draw_cursor_rectangle): fix color
+	allocation
+
 2002-12-10  Radek Doulik  <rodo@ximian.com>
 
 	* htmlengine-edit-tablecell.c (expand_rspan): move remaining cells
